Updated WEAT Test

--- a/WEAT_Test.ipynb
+++ b/WEAT_Test.ipynb
@@ -245,7 +245,7 @@
    ],
    "source": [
     "start_time = time.process_time()\n",
-    "with open('Test_Angana/stability_wiki2.csv', 'a',errors='replace') as the_file:\n",
+    "with open('stability_wiki_weat.csv', 'a',errors='replace') as the_file:\n",
     "    the_file.write('Word,Stability(%),Stability(%) IU,Frequency\\n')\n",
     "    for word in WordList:\n",
     "        similar1=model.wv.most_similar(word, topn=10)\n",
@@ -261,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv('Test_Angana/stability_wiki2.csv')"
+    "df = pd.read_csv('stability_wiki_weat.csv')"
    ]
   },
   {
